--- a/samples/MinimalApi.Tests/MinimalApi.Tests.csproj
+++ b/samples/MinimalApi.Tests/MinimalApi.Tests.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <IsPackable>false</IsPackable>
     <IsTestProject>true</IsTestProject>
-    <NoWarn>$(NoWarn);CA1062;CA1707;CA2007;CA2234;SA1600</NoWarn>
+    <NoWarn>$(NoWarn);CA1062;CA1707;CA1861;CA2007;CA2234;SA1600</NoWarn>
     <RootNamespace>MinimalApi</RootNamespace>
     <TargetFramework>net7.0</TargetFramework>
   </PropertyGroup>
