--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -121,10 +121,11 @@ jobs:
   publish-myget:
     needs: validate-packages
     runs-on: ubuntu-latest
-    if: |
-      github.event.repository.fork == false &&
-      (github.ref_name == github.event.repository.default_branch ||
-       startsWith(github.ref, 'refs/tags/v'))
+    if: false
+    #if: |
+    #  github.event.repository.fork == false &&
+    #  (github.ref_name == github.event.repository.default_branch ||
+    #   startsWith(github.ref, 'refs/tags/v'))
 
     environment:
       name: MyGet.org
