--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -63,7 +63,9 @@ jobs:
 
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@50ac8dd1e1b10d09dac7b8727528b91bed831ac0 # v3.0.2
-      if: ${{ github.event.repository.fork == false && !contains('["costellobot[bot]", "dependabot[bot]", "github-actions[bot]"]', github.actor) }}
+      if: |
+        github.event.repository.fork == false &&
+        !contains('["costellobot[bot]", "dependabot[bot]", "github-actions[bot]"]', github.actor)
       with:
         role-to-assume: arn:aws:iam::492538393790:role/github-actions-test
         role-session-name: ${{ github.event.repository.name }}-${{ github.run_id }}-build
@@ -143,7 +145,10 @@ jobs:
       uses: actions/setup-dotnet@3447fd6a9f9e57506b15f895c5b76d3b197dc7c2 # v3.2.0
 
     - name: Push NuGet packages to feedz.io
-      run: dotnet nuget push "*.nupkg" --api-key ${{ secrets.FEEDZ_IO_TOKEN }} --skip-duplicate --source https://f.feedz.io/${{ github.repository }}/nuget/index.json
+      env:
+        API_KEY: ${{ secrets.FEEDZ_IO_TOKEN }}
+        SOURCE: "https://f.feedz.io/${{ github.repository }}/nuget/index.json"
+      run: dotnet nuget push "*.nupkg" --api-key "${env:API_KEY}" --skip-duplicate --source "${env:SOURCE}"
 
   publish-nuget:
     needs: validate-packages
@@ -167,4 +172,7 @@ jobs:
       uses: actions/setup-dotnet@3447fd6a9f9e57506b15f895c5b76d3b197dc7c2 # v3.2.0
 
     - name: Push NuGet packages to NuGet.org
-      run: dotnet nuget push "*.nupkg" --api-key ${{ secrets.NUGET_TOKEN }} --skip-duplicate --source https://api.nuget.org/v3/index.json
+      env:
+        API_KEY: ${{ secrets.NUGET_TOKEN }}
+        SOURCE: https://api.nuget.org/v3/index.json
+      run: dotnet nuget push "*.nupkg" --api-key "${env:API_KEY}" --skip-duplicate --source "${env:SOURCE}"
