--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -8,7 +8,7 @@
     <PackageVersion Include="Amazon.Lambda.AspNetCoreServer.Hosting" Version="1.7.3" />
     <PackageVersion Include="Amazon.Lambda.RuntimeSupport" Version="1.12.2" />
     <PackageVersion Include="Amazon.Lambda.Serialization.Json" Version="2.2.4" />
-    <PackageVersion Include="AWSSDK.SQS" Version="3.7.400.3" />
+    <PackageVersion Include="AWSSDK.SQS" Version="4.0.0-preview.6" />
     <PackageVersion Include="coverlet.msbuild" Version="6.0.4" />
     <PackageVersion Include="GitHubActionsTestLogger" Version="2.4.1" />
     <PackageVersion Include="MartinCostello.Logging.XUnit.v3" Version="0.5.1" />
